# balance-adviser

./: .gitignore  liner_regression.py  pyproject.toml  rebalance.py  requirements.txt  run.py
data/: yahoo_finance.py
db/: connection.py
src/: logger.py
unittest/: yahoo_finance_test.py
util/: __init__.py
