[tool.poetry]
name = "balance-advisor"
version = "0.1.0"
description = ""
authors = ["Window10 <asplannedl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
pymysql = "^0.9.3"
MarkupSafe = "^1.1.1"
pytz = "^2020.1"
requests = "^2.23.0"
six = "^1.15.0"
tzlocal = "^2.1"
Werkzeug = "^1.0.1"
yfinance = "^0.1.54"
lxml = "^4.5.1"
black = "^19.10b0"
pandas_datareader = "^0.8.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
